--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,8 @@
-name: test
+name: publish
 
 on:
-  push:
-    branches: ["release"]
-  pull_request:
-    branches: ["release"]
+  release:
+    types: [published]
 
 env:
   CARGO_TERM_COLOR: always
@@ -19,3 +17,5 @@ jobs:
         run: cargo build --verbose
       - name: Run tests
         run: cargo test --verbose
+      - name: Publish
+        run: cargo publish --token '${{ secrets.CARGO_REGISTRY_TOKEN }}'
