--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,10 @@ failure = "0.1.6"
 tracing = { version = "0.1.37", optional = true }
 
 [features]
-default = []
+default = ["cache_game_state"]
+cache_game_state = []
 instrument_game = ["dep:tracing"]
+
 
 [profile.release]
 opt-level = 3
